# TunoMedia

./: .env  .gitmodules  Cargo.toml  Dockerfile  Move.toml  README.md  build.rs  config.toml  docker-compose.https.yml  docker-compose.yml  package-lock.json  package.json
config/: envoy.yaml  tuno-distributor.service
move/: README.md
move/tests/: utils.move
proto/: tuno.proto
sources/: tuno.move
src/: client.rs  constants.rs  distribution_commands.rs  lib.rs  local_storage.rs  main.rs  music_commands.rs  tuno_commands.rs  types.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/config/: mod.rs
src/displays/: mod.rs  song_listing.rs
src/lib/: AddSongButton.svelte  ConnectButton.svelte  MusicPlayer.svelte.ts  SongListing.svelte  WalletAdapter.svelte.ts
src/lib/Content/: AddSongButton.svelte  Content.svelte  SongListing.svelte
src/lib/Footer/: Footer.svelte
src/lib/Header/: ConnectButton.svelte  ConnectWalletButton.svelte  Header.svelte
src/lib/Player/: MusicPlayer.svelte.ts  TunoSocket.svelte.ts  TunoSocketDebugger.svelte  (+1 more)
src/routes/: +layout.svelte  +page.svelte
src/server/: mod.rs  tuno.rs  utils.rs
src/static/: songs.json
tests/: constants.move  creator_tests.move  distributor_tests.move  user_tests.move  utils.move
tuno/: README.md
tuno-cli/: Cargo.toml  README.md  build.rs
tuno-cli/config/: tuno-distributor.service
tuno-cli/src/: client.rs  constants.rs  displays.rs  distribution_commands.rs  kiosk_commands.rs  lib.rs  local_storage.rs  main.rs  types.rs  utils.rs
tuno/tests/: constants.move  distributor_tests.move  user_tests.move
webapp/: README.md  package-lock.json  package.json  tailwind.config.ts
webapp/src/: app.css
webapp/src-tauri/: Cargo.toml  tauri.conf.json
(+25 files in other folders)
