[package]
name = "tuno-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.7"
log = "0.4.26"
prost = "0.13.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }

[build-dependencies]
tonic-build = "0.12.3"
