[package]
name = "tuno-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
prost = "0.13.5"
tower-http = { version = "0.6.2", features = ["cors"] }
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk" }

[build-dependencies]
tonic-build = "0.12.3"
